scss/main.scss
@import "config";
@import "menu";

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  line-height: 1.5;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  background: $primary-color;
  color: set-text-color($primary-color);
  height: 100%;
  @include easeOut;
}

// preloader
#preloader {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  animation: fill-anim 0.5s ease forwards 3.5s;
}

#preloader path:nth-child(1) {
  stroke-dasharray: 811.4px;
  stroke-dashoffset: 811.4px;
  animation: line-anim 2s ease forwards;
}

#preloader path:nth-child(2) {
  stroke-dasharray: 460.1px;
  stroke-dashoffset: 460.1px;
  animation: line-anim 2s ease forwards 0.3s;
}

#preloader path:nth-child(3) {
  stroke-dasharray: 306.2px;
  stroke-dashoffset: 306.2px;
  animation: line-anim 2s ease forwards 0.6s;
}

#preloader path:nth-child(4) {
  stroke-dasharray: 417.5px;
  stroke-dashoffset: 417.5px;
  animation: line-anim 2s ease forwards 0.9s;
}

#preloader path:nth-child(5) {
  stroke-dasharray: 564.5px;
  stroke-dashoffset: 564.5px;
  animation: line-anim 2s ease forwards 1.2s;
}

#preloader path:nth-child(6) {
  stroke-dasharray: 806.5px;
  stroke-dashoffset: 806.5px;
  animation: line-anim 2s ease forwards 1.5s;
}

#preloader path:nth-child(7) {
  stroke-dasharray: 460.1px;
  stroke-dashoffset: 460.1px;
  animation: line-anim 2s ease forwards 1.8s;
}

@keyframes line-anim {
  to {
    stroke-dashoffset: 0;
  }
}

@keyframes fill-anim {
  from {
    fill: transparent;
  }
  to {
    fill: $secondary-color;
  }
}

// End of Preloader

img {
  width: 100%;
}

[data-theme="light"] {
  body {
    background: $light-color;
    color: set-text-color($light-color);
  }
}

.text-secondary {
  color: $secondary-color;
}

a {
  text-decoration: none;
  color: #fff;
}

// Headings
h1,
h2,
h3 {
  font-weight: 400;

  &.lg-heading {
    font-size: 5rem;
  }

  &.sm-heading {
    padding: 0.2rem 1rem;
    margin-bottom: 2rem;
    background: rgba(lighten($primary-color, 1), 0.5);
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
  }
}

// Header
header {
  width: 100%;
  z-index: 2;
  position: fixed;

  &#header {
    display: none;
    opacity: 0;
    @include easeOut;
  }

  .toggle {
    position: absolute;
    top: 35px;
    left: 35px;

    .checkbox {
      opacity: 0;
      position: absolute;

      &:checked + .label .ball {
        transform: translateX(32px);
      }
    }

    .label {
      height: 26px;
      width: 60px;
      border-radius: 50px;
      background-color: darken($primary-color, 10);
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 5px;
      position: relative;
      cursor: pointer;

      .fa-sun {
        color: #f39c12;
      }
      .fa-moon {
        color: $light-color;
      }

      .ball {
        width: 22px;
        height: 22px;
        background-color: #fff;
        position: absolute;
        top: 2px;
        left: 4px;
        border-radius: 50%;
        @include easeOut;
      }
    }
  }
}

main {
  padding: 4rem;
  min-height: calc(100vh - 60px);

  .icons {
    margin-top: 1rem;

    a {
      padding: 0.4rem;
      background-color: darken($primary-color, 1);
      padding-top: 1rem;

      &:hover {
        color: $secondary-color;
        @include easeOut;
      }
    }
  }

  &#home {
    display: none;
    opacity: 0;
    overflow: hidden;
    @include easeOut;

    h1 {
      margin-top: 20vh;
    }
  }

  .btn {
    margin-top: 1.2rem;
  }
}
#footer {
  display: none;
}

// About
#about {
  .about-info {
    display: flex;
    margin-bottom: 3rem;

    img {
      width: 250px;
      height: 250px;
      border-radius: 50%;
      border: 3px solid $secondary-color;
      margin-right: 2rem;
    }

    .bio {
      text-align: left;
      background: darken($primary-color, 5);
      color: set-text-color($primary-color);
      padding: 1.5rem;
      font-size: 1rem;
      border-left: 3px solid $secondary-color;

      p:first-of-type {
        margin-bottom: 1.5rem;
      }
    }
  }

  h3 {
    text-align: left;
    font-weight: 500;
    font-size: 1.5rem;
    line-height: 1.5;
  }

  .progress {
    height: 3px;
    width: 50px;
    border: none;
    margin-bottom: 1.5rem;
    background-color: $secondary-color;
  }

  .tools {
    display: flex;
    flex-wrap: wrap;

    .card {
      width: 150px;
      height: 150px;
      background: darken($primary-color, 5);
      border-bottom: 3px solid $secondary-color;
      margin: 0 0.75rem 0.75rem 0;
      padding: 3rem;
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      text-align: center;

      &:hover {
        cursor: pointer;

        h3 {
          display: block;
          opacity: 1;
        }
      }

      h3 {
        color: set-text-color($primary-color);
        display: none;
        opacity: 0;
        @include easeOut;
      }

      img {
        width: 90px;
        height: 90px;
        text-align: center;
      }
    }
  }
}

// Work/Project
#work {
  .project {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 0.5rem;

    .item {
      display: flex;
      flex-direction: column;

      div {
        padding: 0.2rem;
        background-color: darken($light-color, 10);
        color: set-text-color(darken($light-color, 10));

        p {
          padding: 0 0.3rem;
        }

        .panel {
          display: none;
          overflow: hidden;
          text-align: left;
          @include easeOut;

          .stack {
            text-align: left;
            margin-top: 0.5rem;

            span {
              font-weight: bold;
            }
          }

          .btn-light {
            margin-top: 0.5rem;
          }
        }

        .acc {
          cursor: pointer;
          padding: 0;
          margin: 0;

          &:hover {
            background-color: darken($light-color, 20);
            @include easeOut;
          }

          .fa-chevron-down {
            @include easeOut;
            display: block;
          }

          &.active {
            .fa-chevron-down {
              transform: rotate(0.5turn);
            }
          }
        }
      }
    }
  }
}

// Contact
#contact {
  .contact {
    box-shadow: 0 0 5px 0 rgba(darken($primary-color, 5), 1);

    &-info {
      text-align: center;
      padding: 1rem;
      border-bottom: darken($primary-color, 1) solid 1px;
      transform: translateY(-1200px);
      animation: slideTop 1.5s forwards ease-out;
      @include easeOut;

      @keyframes slideTop {
        to {
          transform: translateY(0);
        }
      }

      h2 {
        font-size: 1.5rem;
      }

      ul {
        list-style: none;
        padding-bottom: 0.5rem;
        margin: 1rem 0;
      }
    }

    &-form {
      background: $light-color;
      color: set-text-color($light-color);
      border: none;
      padding: 1rem;
      transform: translate3d(130%, 0, 0);
      animation: slideLeft 1.5s forwards ease-out 0.5s;
      @include easeOut;

      @keyframes slideLeft {
        to {
          transform: translate3d(0, 0, 0);
        }
      }

      h3 {
        font-weight: 500;
        font-size: 1.5rem;
        margin-bottom: 0.5rem;
      }

      form {
        .form-group {
          margin-bottom: 0.5rem;

          &:last-child {
            margin-bottom: 0;
          }

          label {
            display: block;
            text-align: left;
            margin-bottom: 0.1rem;
            font-weight: 500;
          }

          input {
            padding: 0.5rem;
            border: $secondary-color 1px solid;
            background: transparent;
            width: 100%;
            outline: none;
          }

          textarea {
            border: $secondary-color 1px solid;
            background: transparent;
            width: 100%;
            outline: none;
          }
        }
      }

      .btn-secondary {
        font-size: 1rem;
        width: 100%;
        height: 40px;
        margin-top: 0.5rem;
        border: none;
      }
    }
  }
}

#main-footer {
  text-align: center;
  padding: 1rem;
  height: 60px;
  color: set-text-color($primary-color);
  background: darken($primary-color, 5);
}

@import "mobile";

